--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-index.html 
 <!DOCTYPE html>
 <html>
 <head>
@@ -27,7 +26,7 @@ index.html
        https://developers.google.com/web/fundamentals/primers/service-workers -->
 
   <script>
-    var serviceWorkerVersion = null;
+    var serviceWorkerVersion = '2230253413';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
