--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+  -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Flutter project for testing differenet features and widgets">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="barcode_scanner_pwa">
+  <meta name="apple-mobile-web-app-title" content="experimental">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>barcode_scanner_pwa</title>
+  <title>experimental</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@8.2.3/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
-<script>
-    Dynamsoft.DBR.BarcodeReader._bUseFullFeature = true;
-<!--</script>-->
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-
   <script>
-    var serviceWorkerVersion = '2230253413';
+    var serviceWorkerVersion = '2014444605';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
