--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
   <title>experimental</title>
   <link rel="manifest" href="manifest.json">
 </head>
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@8.2.3/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
+
+<script>
+  Dynamsoft.DBR.BarcodeReader._bUseFullFeature = true;
+</script>
+
 <body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
-    var serviceWorkerVersion = '1122722487';
+   <script>
+    var serviceWorkerVersion = '3220118082';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
